<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/workoutsCatalogFragment">

    <fragment
        android:id="@+id/doneWorkoutFragment"
        android:name="com.example.fitnessbag.presentation.done_workout.DoneWorkoutFragment"
        tools:layout="@layout/done_workout_fragment" >
        <action
            android:id="@+id/action_doneWorkoutFragment_to_workoutsCatalogFragment"
            app:destination="@id/workoutsCatalogFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/workoutsCatalogFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="workoutProgress"
            app:argType="com.example.fitnessbag.presentation.doing_workout.DoingWorkoutProgress" />
        />
    </fragment>
    <fragment
        android:id="@+id/createWorkoutFragment"
        android:name="com.example.fitnessbag.presentation.create_workout.CreateWorkoutFragment"
        android:label="@string/create_workout"
        tools:layout="@layout/create_workout_fragment" >
        <action
            android:id="@+id/action_createWorkoutFragment_to_addExerciseFragment"
            app:destination="@id/addExerciseFragment" />
        <action
            android:id="@+id/action_createWorkoutFragment_to_addExistedExerciseFragment"
            app:destination="@id/addExistedExerciseFragment" />
        <argument
            android:name="workoutId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/addExerciseFragment"
        android:name="com.example.fitnessbag.presentation.create_exersice.CreateExerciseFragment"
        android:label="@string/create_exercise"
        tools:layout="@layout/create_exercise_fragment" />
    <fragment
        android:id="@+id/workoutsCatalogFragment"
        android:name="com.example.fitnessbag.presentation.workouts_catalog.WorkoutsCatalogFragment"
        android:label="@string/catalog"
        tools:layout="@layout/fragment_workouts" >
        <action
            android:id="@+id/action_workoutsCatalogFragment_to_workoutDetailFragment"
            app:destination="@id/workoutDetailFragment" />
        <action
            android:id="@+id/action_workoutsCatalogFragment_to_createWorkoutFragment"
            app:destination="@id/createWorkoutFragment" />
        <action
            android:id="@+id/action_workoutsCatalogFragment_to_workoutHistoryFragment"
            app:destination="@id/workoutHistoryFragment" />
        <action
            android:id="@+id/action_workoutsCatalogFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/workoutDetailFragment"
        android:name="com.example.fitnessbag.presentation.workout_detail.WorkoutDetailFragment">
        <argument
            android:name="workoutId"
            app:argType="long" />
        <action
            android:id="@+id/action_workoutDetailFragment_to_doingExerciseFragment"
            app:destination="@id/doingExerciseFragment" />
    </fragment>
    <fragment
        android:id="@+id/addExistedExerciseFragment"
        android:name="com.example.fitnessbag.presentation.add_existed_exercise.AddExistedExerciseFragment"
        android:label="@string/select_existed"
        tools:layout="Choose Exercise" />
    <fragment
        android:id="@+id/workoutHistoryFragment"
        android:name="com.example.fitnessbag.presentation.workout_history.WorkoutHistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/workout_history_fragment" />
    <fragment
        android:id="@+id/restFragment"
        android:name="com.example.fitnessbag.presentation.doing_workout.rest.RestFragment"
        android:label="fragment_rest"
        tools:layout="@layout/fragment_rest" >
        <action
            android:id="@+id/action_restFragment_to_doingExerciseFragment"
            app:destination="@id/doingExerciseFragment"
            app:popUpTo="@id/workoutDetailFragment" />
        <argument
            android:name="progress"
            app:argType="com.example.fitnessbag.presentation.doing_workout.DoingWorkoutProgress" />
        <argument
            android:name="restSeconds"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/doingExerciseFragment"
        android:name="com.example.fitnessbag.presentation.doing_workout.doing_exerise.DoingExerciseFragment"
        android:label="fragment_doing_exercise"
        tools:layout="@layout/fragment_doing_exercise" >
        <action
            android:id="@+id/action_doingExerciseFragment_to_restFragment"
            app:destination="@id/restFragment"
            app:popUpTo="@id/workoutDetailFragment" />
        <action
            android:id="@+id/action_doingExerciseFragment_to_doneWorkoutFragment"
            app:destination="@id/doneWorkoutFragment" />
        <action
            android:id="@+id/action_doingExerciseFragment_self"
            app:destination="@id/doingExerciseFragment"
            app:popUpTo="@id/workoutDetailFragment" />
        <argument
            android:name="progress"
            app:argType="com.example.fitnessbag.presentation.doing_workout.DoingWorkoutProgress" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.fitnessbag.presentation.settings.SettingsFragment"
        android:label="SettingsFragment" />
</navigation>
